@@ -37,6 +37,7 @@ import javax.swing.border.EmptyBorder;
 
 import org.gjt.sp.jedit.GUIUtilities;
 import org.gjt.sp.jedit.OperatingSystem;
+import org.gjt.sp.jedit.io.VFS;
 import org.gjt.sp.jedit.jEdit;
 import org.gjt.sp.jedit.View;
 import org.gjt.sp.jedit.browser.VFSBrowser;
@@ -200,6 +201,11 @@ public class FilePropertiesDialog extends EnhancedDialog
 		JPanel nameField = new JPanel();
 		nameField.add(new JLabel(jEdit.getProperty("fileprop.name")+": "));
 		nameTextField = new JTextField(local.getName(), 20);
+		if ((local.getVFS().getCapabilities() & VFS.RENAME_CAP) == 0)
+		{
+			// If the VFS cannot rename, the nameTextField is non editable
+			nameTextField.setEditable(false);
+		}
 		nameField.add(nameTextField);
 		northPanel.add(BorderLayout.CENTER, nameField);
 		northPanel.add(BorderLayout.SOUTH, new JPanel());
@@ -282,7 +288,11 @@ public class FilePropertiesDialog extends EnhancedDialog
 	{
 		if(nameTextField != null)
 		{
-			browser.rename(browser.getSelectedFiles()[0].getPath(), nameTextField.getText());
+			VFSFile vfsFile = browser.getSelectedFiles()[0];
+			if ((vfsFile.getVFS().getCapabilities() & VFS.RENAME_CAP) != 0)
+			{
+				browser.rename(vfsFile.getPath(), nameTextField.getText());
+			}
 		}
 
 		GUIUtilities.saveGeometry(this,"propdialog");
